Making splice_si_api and mem_storage modules pass FindBugs